--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 buildscript {
-    ext.corda_release_group = 'net.corda'
-    ext.corda_release_version = '3.2-corda'
-    ext.kotlin_version = '1.2.71'
+    ext {
+        corda_release_group = 'net.corda'
+        corda_release_version = '3.3-corda'
+        kotlin_version = '1.2.71'
+    }
 
     repositories {
         mavenLocal()
@@ -22,12 +24,20 @@ repositories {
     mavenLocal()
     mavenCentral()
     jcenter()
+
+    // The following was necessary to get the test sources to be aware of the main sources...
+    maven { url 'https://ci-artifactory.corda.r3cev.com/artifactory/corda' }
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
 
     cordaCompile "$corda_release_group:corda-core:$corda_release_version"
+    testCompile "$corda_release_group:corda-node-driver:$corda_release_version"
+
+    // This fixed our MissingContractAttachments error in test
+    cordapp "$corda_release_group:corda-finance:$corda_release_version"
 }
 
 compileKotlin {
