--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,9 @@ buildscript {
     ext {
         corda_release_group = 'net.corda'
         corda_release_version = '3.3-corda'
+        corda_gradle_plugins_version = '3.2.1'
         kotlin_version = '1.2.71'
+        junit_version = '4.12'
         ext.quasar_version = '0.7.9'
     }
 
@@ -13,6 +15,9 @@ buildscript {
     }
 
     dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "net.corda.plugins:cordapp:$corda_gradle_plugins_version"
+        classpath "net.corda.plugins:cordformation:$corda_gradle_plugins_version"
         classpath "net.corda.plugins:quasar-utils:$corda_gradle_plugins_version"
     }
 }
@@ -25,6 +30,13 @@ plugins {
 group 'com.cordacodeclub'
 version '1.0-SNAPSHOT'
 
+cordapp {
+    info {
+        targetPlatformVersion 3
+        minimumPlatformVersion 3
+    }
+}
+
 repositories {
     mavenLocal()
     mavenCentral()
@@ -35,17 +47,34 @@ repositories {
     maven { url 'https://jitpack.io' }
 }
 
+apply plugin: 'kotlin'
+apply plugin: 'net.corda.plugins.cordapp'
+apply plugin: 'net.corda.plugins.cordformation'
 apply plugin: 'net.corda.plugins.quasar-utils'
+
+jar.baseName = "direct-agreement"
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
+    testCompile "junit:junit:$junit_version"
 
     cordaCompile "$corda_release_group:corda-core:$corda_release_version"
+    cordaCompile "$corda_release_group:corda-finance:$corda_release_version"
+    cordaCompile "$corda_release_group:corda-jackson:$corda_release_version"
+    cordaCompile "$corda_release_group:corda-rpc:$corda_release_version"
+
+    cordaRuntime "$corda_release_group:corda:$corda_release_version"
+
     testCompile "$corda_release_group:corda-node-driver:$corda_release_version"
 
     // This fixed our MissingContractAttachments error in test
     cordapp "$corda_release_group:corda-finance:$corda_release_version"
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "-parameters" // Required for shell commands.
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
@@ -62,4 +91,44 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
+    directory "./build/nodes"
+    node {
+        name "O=Notary,L=London,C=GB"
+        notary = [validating : false]
+        p2pPort 10006
+        cordapps = ["$corda_release_group:corda-finance:$corda_release_version"]
+    }
+    node {
+        name "O=PartyA,L=London,C=GB"
+        p2pPort 10007
+        rpcSettings {
+            address("localhost:10008")
+            adminAddress("localhost:10048")
+        }
+        cordapps = ["$corda_release_group:corda-finance:$corda_release_version"]
+        rpcUsers = [[user: "user1", "password": "test", "permissions": ["ALL"]]]
+    }
+    node {
+        name "O=PartyB,L=New York,C=US"
+        p2pPort 10010
+        rpcSettings {
+            address("localhost:10011")
+            adminAddress("localhost:10051")
+        }
+        cordapps = ["$corda_release_group:corda-finance:$corda_release_version"]
+        rpcUsers = [[user: "user1", "password": "test", "permissions": ["ALL"]]]
+    }
+    node {
+        name "O=PartyC,L=Paris,C=FR"
+        p2pPort 10013
+        rpcSettings {
+            address("localhost:10014")
+            adminAddress("localhost:10054")
+        }
+        cordapps = ["$corda_release_group:corda-finance:$corda_release_version"]
+        rpcUsers = [[user: "user1", "password": "test", "permissions": ["ALL"]]]
+    }
 }
