--- a/build.gradle
+++ b/build.gradle
@@ -134,3 +134,9 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
         rpcUsers = [[user: "user1", "password": "test", "permissions": ["ALL"]]]
     }
 }
+
+task runLegalAgreementClientRPCKotlin(type: JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = 'com.cordacodeclub.directAgreement.client.LegalAgreementClientRPCKt'
+    args 'localhost:10008'
+}
