--- a/build.gradle
+++ b/build.gradle
@@ -103,7 +103,7 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
         cordapps = ["$corda_release_group:corda-finance:$corda_release_version"]
     }
     node {
-        name "O=PartyA,L=London,C=GB"
+        name "O=Contractor,L=London,C=GB"
         p2pPort 10007
         rpcSettings {
             address("localhost:10008")
@@ -114,7 +114,7 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
         rpcUsers = [[user: "user1", "password": "test", "permissions": ["ALL"]]]
     }
     node {
-        name "O=PartyB,L=New York,C=US"
+        name "O=Lender,L=New York,C=US"
         p2pPort 10010
         rpcSettings {
             address("localhost:10011")
@@ -124,11 +124,21 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
         rpcUsers = [[user: "user1", "password": "test", "permissions": ["ALL"]]]
     }
     node {
-        name "O=PartyC,L=Paris,C=FR"
+        name "O=Intermediary,L=Paris,C=FR"
         p2pPort 10013
         rpcSettings {
             address("localhost:10014")
             adminAddress("localhost:10054")
+        }
+        cordapps = ["$corda_release_group:corda-finance:$corda_release_version"]
+        rpcUsers = [[user: "user1", "password": "test", "permissions": ["ALL"]]]
+    }
+    node {
+        name "O=Oracle,L=Hamburg,C=DE"
+        p2pPort 10016
+        rpcSettings {
+            address("localhost:10017")
+            adminAddress("localhost:10057")
         }
         cordapps = ["$corda_release_group:corda-finance:$corda_release_version"]
         rpcUsers = [[user: "user1", "password": "test", "permissions": ["ALL"]]]
