--- a/build.gradle
+++ b/build.gradle
@@ -142,6 +142,7 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
             address("localhost:10017")
             adminAddress("localhost:10057")
         }
+        webPort 10018
         cordapps = ["$corda_release_group:corda-finance:$corda_release_version"]
         rpcUsers = [[user: "user1", "password": "test", "permissions": ["ALL"]]]
     }
